--- a/src/styl/buttons.styl
+++ b/src/styl/buttons.styl
@@ -15,6 +15,7 @@
   letter-spacing: .15em
   cursor: pointer
   position: relative
+  overflow: hidden
   &:hover
     background: darken(white, 9%)
   &:active
